Added new fields and updated the logic
Added access level field to deck
Added template field type to templateField
Added curtom field part of speech (on ui should be a checkbox"
Added card duplication check
Added custom excpetion and updated GlobalExceptionHandler